[project]
name = "tasmota_power_exporter"
version = "1.0.0"
dependencies = [
    "prometheus_client",
    "requests",
]

[project.scripts]
prometheus-tasmota-power-exporter = "tasmota_power_exporter:run_cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}